# oskeeper

./: .gitignore  Makefile  README.md
CICD/: Docker搭建Gitlab服务.md
Etcd/: Etcd环境搭建.md  Http客户端.md  README-etcdctl.md  README-etcdutl.md  rpc.swagger.json  v3election.swagger.json  v3lock.swagger.json  命令1.md  集群.md  集群1.md  集群2.md
PostgreSQL/: 安装PG数据库.md  高可用系列-安装Haproxy..md
Shell/: lib.sh  main.sh
clound/: MinDoc操作指南.md  README.md
consul/: README.md
db/ClickHouse/sqlalchemy_clickhouse_demo/: .gitignore  Makefile  README.md  __init__.py  chdb_demo.py  config.py  demo.py  main.py  persistent_chdb_demo.py  pyproject.toml  requirements.txt  test_functionality.py  说明.txt
db/ClickHouse/sqlalchemy_clickhouse_demo/examples/: batch_operations.py  crud_operations.py  query_operations.py
db/ClickHouse/sqlalchemy_clickhouse_demo/master.chdb/store/07f/07f81823-281e-47f9-b88b-0c57fd91f3e2/: products.sql
db/ClickHouse/sqlalchemy_clickhouse_demo/master.chdb/store/0a0/0a0772a6-abcd-4dc3-b1db-ed02105519f6/: order_items.sql
db/ClickHouse/sqlalchemy_clickhouse_demo/master.chdb/store/5cc/5cc7b6d8-fb94-4764-9c8c-9e3b9ee11188/: orders.sql
db/ClickHouse/sqlalchemy_clickhouse_demo/master.chdb/store/d37/d3720c8d-607e-4794-b0cb-d943e10f9c55/: users.sql
db/ClickHouse/sqlalchemy_clickhouse_demo/models/: __init__.py  base.py  order.py  order_item.py  product.py  user.py
db/ClickHouse/sqlalchemy_clickhouse_demo/utils/: database.py
docker/: .dockerignore  Dockerfile  Dockerfile copy  Dockerfile-go  Dockerfile.dev  Dockerfile.md  Dockerfile语法.md  Go.Dockerfile  Makefile  go.mod  (+9 more)
(+384 files in other folders)
