[project]
name = "sqlalchemy-clickhouse-demo"
version = "1.0.0"
description = "SQLAlchemy与ClickHouse Local模式演示项目"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy>=1.4.0",
    "clickhouse-sqlalchemy>=0.2.0",
    "clickhouse-driver>=0.2.0",
    "chdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]